--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,6 @@
-/* Dame estilo! */
-
-/*
-  Nota: ningún árbol fue talado o dañado
-  para la fabricación de estas hojas de estilo.
-*/
+@import './TodoCounter.scss';
+@import './ToDoCreateButton.scss';
+@import './Index.scss';
+@import './ToDoItem.scss';
+@import './ToDoList.scss';
+@import './ToDoSearch.scss';
