--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,6 @@
+@import './Reset.scss';
 @import './TodoCounter.scss';
 @import './ToDoCreateButton.scss';
-@import './Index.scss';
 @import './ToDoItem.scss';
 @import './ToDoList.scss';
 @import './ToDoSearch.scss';
