--- a/src/styles/ToDoList.scss
+++ b/src/styles/ToDoList.scss
@@ -8,9 +8,12 @@
 }
 
 .firstItem_text{
-margin: auto;
-margin-top: 80px;
-font-size: 30px;
+margin: 40px 0;
+
+font-size: 20px;
 color: rgb(98, 142, 127);
 font-weight: 600;
+display: flex;
+justify-content: center;
+
 }
