--- a/src/styles/ToDoSearch.scss
+++ b/src/styles/ToDoSearch.scss
@@ -1,24 +1,28 @@
-.toDoSearch{
+.toDoSearch {
+    display: flex;
+    justify-content: center;
+  &_input {
     background-color: whitesmoke;
-    border-radius: 2px;
+    border-radius: 4px;
     border: 2px solid black;
-    margin: 0 24px;
+    margin: auto;
     height: 64px;
-    width: calc(100% - 62px);
+    width: 250px;
     font-size: 24px;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+      sans-serif;
     font-weight: 400;
     color: black;
     box-shadow: 0px 5px 50px black;
+  }
+}
+.toDoSearch_input::placeholder {
+  color: rgb(176, 183, 182);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 400;
 }
 
-.toDoSearch::placeholder{
-    color: rgb(176, 183, 182);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 400;
-}
-
-.toDoSearch:focus{
-    outline-color: rgb(122, 180, 180);
+.toDoSearch_input:focus {
+  outline-color: rgb(122, 180, 180);
 }
