--- a/src/styles/CreateItemModal.scss
+++ b/src/styles/CreateItemModal.scss
@@ -1,29 +1,36 @@
 .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
-
-  transform: translateY(-270px);
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 100;
 
   &_content {
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     border: solid 0.5px black;
     height: 200px;
-    width: 700px;
+    width: 310px;
     display: flex;
+    flex-direction: column;
     justify-content: right;
     align-items: center;
     gap: 20px;
- 
 
     &--input {
+      margin-top: 50px;
       color: white;
       font-size: 20px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       padding-left: 20px;
       background-color: #c7dddb;
       height: 50px;
-      width: 400px;
+      width: 250px;
       border-radius: 5px;
       border: solid 0.5px black;
     }
@@ -35,13 +42,17 @@
     }
     &--closeButton {
       display: flex;
+      justify-content: center;
+      align-items: center;
       margin-right: 10px;
       z-index: 100;
       border-radius: 50%;
-      transform: translateY(-99px);
+      transform: translate(135px, -185px);
+      width: 27px;
+      height: 27px;
       border: 0.2px solid #a8a8a8;
       background-color: #a8a8a8(0, 0, 0, 0);
-      font-size: 25px;
+      font-size: 20px;
       color: white;
       box-shadow: 1px 1px 9px #a8a8a8;
     }
@@ -50,6 +61,7 @@
 
 input::placeholder {
   color: white;
+  font-size: 16px;
 }
 .modal_content--closeButton:hover {
   background-color: rgb(243, 66, 66);
