--- a/src/styles/CreateItemModal.scss
+++ b/src/styles/CreateItemModal.scss
@@ -28,7 +28,7 @@
       font-size: 20px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       padding-left: 20px;
-      background-color: #c7dddb;
+      background-color: #d4e1e1;
       height: 50px;
       width: 250px;
       border-radius: 5px;
