--- a/src/styles/ToDoList.scss
+++ b/src/styles/ToDoList.scss
@@ -12,8 +12,18 @@ margin: 40px 0;
 
 font-size: 20px;
 color: rgb(98, 142, 127);
-font-weight: 600;
+font-weight: 500;
 display: flex;
 justify-content: center;
 
+@media (min-width: 768px) {
+        font-size: 30px;
+        font-weight: 400;
+    }
+
+@media (min-width: 1024px) {
+        font-size: 40px;
+        font-weight: 400;
+      
+    }
 }
