--- a/src/styles/ToDoSearch.scss
+++ b/src/styles/ToDoSearch.scss
@@ -1,12 +1,12 @@
 .toDoSearch {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
   &_input {
     background-color: whitesmoke;
     border-radius: 4px;
     border: 2px solid black;
     margin: auto;
-    height: 64px;
+    height: 65px;
     width: 250px;
     font-size: 24px;
     text-align: center;
@@ -15,12 +15,33 @@
     font-weight: 400;
     color: black;
     box-shadow: 0px 5px 50px black;
+
+    @media (min-width: 768px) {
+      font-size: 34px;
+      height: 70px;
+      width: 450px;
+    }
+
+    @media (min-width: 1024px) {
+      font-size: 34px;
+      height: 90px;
+      width: 650px;
+    }
   }
 }
 .toDoSearch_input::placeholder {
   color: rgb(176, 183, 182);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
+  letter-spacing: 1px;
+
+  @media (min-width: 768) {
+    font-size: 30px;
+  }
+
+  @media (min-width: 1024px) {
+    font-size: 30px;
+  }
 }
 
 .toDoSearch_input:focus {
