--- a/src/styles/ToDoItem.scss
+++ b/src/styles/ToDoItem.scss
@@ -7,6 +7,8 @@
     margin-top: 24px;
     box-shadow: 0px 5px 50px black;
     
+  
+
   &__iconCheck {
     position: absolute;
     left: 12px;
@@ -30,6 +32,11 @@
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
+
+      @media (min-width: 1024px) {
+          font-size: 24px;
+      
+        }
   }
 
   &__complete {
