--- a/src/styles/Reset.scss
+++ b/src/styles/Reset.scss
@@ -1,12 +1,10 @@
 html {
   font-size: 62.5%;
-
 }
 :root {
   margin: 0 24px;
   position: relative;
   min-height: 100vh;
- 
 }
 * {
   padding: 0;
@@ -15,13 +13,10 @@ html {
 }
 
 body {
- 
   margin: 0;
   padding: 0;
-  background: white;
+  //background: white;
   color: black;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-
