--- a/src/styles/ToDoList.scss
+++ b/src/styles/ToDoList.scss
@@ -1,29 +1,29 @@
-.toDoList{
-    margin: 0;
-    padding: 0 0 56px 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.toDoList {
+  margin: 0;
+  padding: 0 0 56px 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: transparent;
 }
 
-.firstItem_text{
-margin: 40px 0;
+.firstItem_text {
+  margin: 40px 0;
 
-font-size: 20px;
-color: rgb(98, 142, 127);
-font-weight: 500;
-display: flex;
-justify-content: center;
+  font-size: 20px;
+  color: rgb(98, 142, 127);
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
 
-@media (min-width: 768px) {
-        font-size: 30px;
-        font-weight: 400;
-    }
+  @media (min-width: 768px) {
+    font-size: 30px;
+    font-weight: 400;
+  }
 
-@media (min-width: 1024px) {
-        font-size: 40px;
-        font-weight: 400;
-      
-    }
+  @media (min-width: 1024px) {
+    font-size: 40px;
+    font-weight: 400;
+  }
 }
