--- a/src/styles/TodoCounter.scss
+++ b/src/styles/TodoCounter.scss
@@ -1,14 +1,15 @@
-.toDoCounter__text{
-   font-size: 24px;
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   text-align: center;
-   padding: 40px;
+.toDoCounter__text {
+  font-size: 24px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: center;
+  padding: 40px;
 
-@media (min-width: 1024px) {
-   font-size: 34px;
-}
+  @media (min-width: 1024px) {
+    font-size: 34px;
+  }
 }
 
-.toDoCounter__number{
-font-weight: bold;
+.toDoCounter__number {
+  font-weight: bold;
 }
