--- a/src/styles/ToDoCreateButton.scss
+++ b/src/styles/ToDoCreateButton.scss
@@ -1,25 +1,27 @@
-.createToDoButton{
-    background-color: rgb(120, 120, 201);
-    box-shadow: 0px 5px 25px rgb(62, 62, 88);
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 50px;
-    position: fixed;
-    bottom: 24px;
-    right: 24px;
-    font-weight: bold;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 64px;
-    width: 64px;
+.createToDoButton {
+  background-color: rgb(120, 120, 201);
+  box-shadow: 0px 5px 25px rgb(62, 62, 88);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 50px;
+  position: relative;
+  margin: auto;
 
-    transform: rotate(0);
-    transition: .3s ease;
+  top: 20px;
+
+  font-weight: bold;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 64px;
+  width: 64px;
+
+  transform: rotate(0);
+  transition: 0.3s ease;
 }
 
-.createToDoButton:hover{
-    transform: rotate(180deg);
+.createToDoButton:hover {
+  transform: rotate(180deg);
 }
